--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "scripts": {
     "start": "server.js"
   },
-  "version": "0.0.0-4",
+  "version": "0.0.0-6",
   "engines": {
     "node": "0.8.x"
   },
   "dependencies": {
-    "socket.io": "0.9.x"
+    "socket.io": "0.9.x",
+    "mongojs": "0.7.x"
   }
 }
