--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-    "name": "mint-editor"
-  , "version": "0.0.1"
-  , "private": true
-  , "dependencies": {
-      "express": "2.5.10"
-    , "jade": ">= 0.26.1"
-    , "socket.io": ">= 0.9.6"
-  }
+    "name": "mint-editor",
+    "version": "0.0.1-2",
+    "private": true,
+    "dependencies": {
+        "express": "2.5.10",
+        "jade": ">= 0.26.1",
+        "socket.io": ">= 0.9.6"
+    },
+    "subdomain": "galacziendre-mint",
+    "scripts": {
+        "start": "node app.js"
+    },
+    "engines": {
+        "node": "0.10.x"
+    }
 }
