--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dependencies": {
         "express": "2.5.10",
         "jade": ">= 0.26.1",
-        "socket.io": ">= 0.9.6"
+        "socket.io": ">= 0.9.6",
+        "mongodb": "~1.3.9"
     },
     "subdomain": "galacziendre-mint",
     "scripts": {
