more subdocuments and bib

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ LaTeX_diplomaterv/diploma.thm
 
 LaTeX_diplomaterv/diploma.toc
 LaTeX_diplomaterv/out/*
+
+LaTeX_diplomaterv/diploma.blg
+
+LaTeX_diplomaterv/diploma.bbl
